--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -76,5 +76,10 @@
 
 			<p class="copyright">Copyright 2015. Relaxr.</p>
 		</footer>
+		
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>		
+<script src="jquery.js"></script>
+
+
 	</body>
 </html>
